# Streetcast

./: .gitignore  CMakeLists.txt  README.md
include/: allocate.h  call_convention.h  common.h  compile.h  debug.h  defines.h  scir.h  vm.h
include/emit/: mips.h
src/: main.c
src/allocate/: allocate.c
src/call_convention/: mips.c
src/compile/: compile.c  mips.c
src/scir/: block.c
src/vm/: compile.c
